--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -43,7 +43,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>18</ApplicationRevision>
+    <ApplicationRevision>21</ApplicationRevision>
     <ApplicationVersion>10.1.8.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -324,6 +324,7 @@
     <Compile Include="Business\Client.Model\HPV1618ReflexOrderPAPNormalHPVPositive.cs" />
     <Compile Include="Business\Client.Model\HPVCompoundStandingOrderRule6.cs" />
     <Compile Include="Business\Client.Model\IdahoClientIdList.cs" />
+    <Compile Include="Business\Facility.Model\Cellnetix.cs" />
     <Compile Include="Business\Facility.Model\UCHLoneTreeBreastCenter.cs" />
     <Compile Include="Business\Facility.Model\VirginiaMason.cs" />
     <Compile Include="Business\Facility.Model\UCDavisMedicalCenter.cs" />
@@ -1144,7 +1145,7 @@
     <Compile Include="Business\RedisAppDataConnection.cs" />
     <Compile Include="Business\RedisDatabaseEnum.cs" />
     <Compile Include="Business\RedisLocksConnection.cs" />
-    <Compile Include="Business\RedisLocalConnection.cs" />
+    <Compile Include="Business\RedisSingleton.cs" />
     <Compile Include="Business\Reports\BlocksSentNotReturnedReport.cs" />
     <Compile Include="Business\Reports\RetrospectiveReviewReport.xaml.cs">
       <DependentUpon>RetrospectiveReviewReport.xaml</DependentUpon>
@@ -1588,7 +1589,6 @@
     <Compile Include="Business\Persistence\XmlPropertyWriter.cs" />
     <Compile Include="Business\ProcessingModeEnum.cs" />
     <Compile Include="Business\PropertyChangedItem.cs" />
-    <Compile Include="Business\RedisConnection.cs" />
     <Compile Include="Business\ReflexTestingPlan.Model\LynchBRAFStep.cs" />
     <Compile Include="Business\ReflexTestingPlan.Model\LynchIHCStep.cs" />
     <Compile Include="Business\ReflexTestingPlan.Model\LynchMLH1ByPCRStep.cs" />
