--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1146,7 +1146,7 @@
     <Compile Include="Business\RedisAppDataConnection.cs" />
     <Compile Include="Business\RedisLocksConnection.cs" />
     <Compile Include="Business\RedisSingleton.cs" />
-    <Compile Include="Business\RedisStore.cs" />
+    <Compile Include="Store\AppDataStore.cs" />
     <Compile Include="Business\Reports\BlocksSentNotReturnedReport.cs" />
     <Compile Include="Business\Reports\RetrospectiveReviewReport.xaml.cs">
       <DependentUpon>RetrospectiveReviewReport.xaml</DependentUpon>
@@ -3270,6 +3270,13 @@
     <Compile Include="MySQLMigration\TableForeignKeyCollection.cs" />
     <Compile Include="MySQLMigration\TableIndex.cs" />
     <Compile Include="MySQLMigration\TableIndexCollection.cs" />
+    <Compile Include="Store\AppDBNameEnum.cs" />
+    <Compile Include="Store\IRedisServer.cs" />
+    <Compile Include="Store\RedisDB.cs" />
+    <Compile Include="Store\RedisServerKub.cs" />
+    <Compile Include="Store\RedisStoreProd.cs" />
+    <Compile Include="Store\RedisStore.cs" />
+    <Compile Include="Store\RedisStoreDefinition.cs" />
     <Compile Include="UI\AmendmentPage.xaml.cs">
       <DependentUpon>AmendmentPage.xaml</DependentUpon>
     </Compile>
