--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1163,17 +1163,26 @@
     <Compile Include="Business\Test\API2MALT1ByFISH\API2MALT1ByFISHWPHOBXView.cs" />
     <Compile Include="Business\Test\BCellEnumeration\BCellEnumerationCMMCNTEView.cs" />
     <Compile Include="Business\Test\BCellEnumeration\BCellEnumerationWPHOBXView.cs" />
+    <Compile Include="Business\Test\BCellGeneRearrangement\BCellGeneRearrangementCMMCNTEView.cs" />
     <Compile Include="Business\Test\BCellGeneRearrangement\BCellGeneRearrangementWPHOBXView.cs" />
+    <Compile Include="Business\Test\BCL2t1418ByFISH\BCL2t1418ByFISHCMMCNTEView.cs" />
     <Compile Include="Business\Test\BCL2t1418ByFISH\BCL2t1418ByFISHWPHOBXView.cs" />
+    <Compile Include="Business\Test\BCRABLByFish\BCRABLByFishCMMCNTEView.cs" />
     <Compile Include="Business\Test\BCRABLByFish\BCRABLByFishWPHOBXView.cs" />
+    <Compile Include="Business\Test\BCRABLByPCR\BCRABLByPCRCMMCNTEView.cs" />
     <Compile Include="Business\Test\BCRABLByPCR\BCRABLByPCRWPHOBXView.cs" />
+    <Compile Include="Business\Test\CCNDIBCLIGHByFISH\CCNDIBCLIGHByFISHCMMCNTEView.cs" />
     <Compile Include="Business\Test\CCNDIBCLIGHByFISH\CCNDIBCLIGHByFISHWPHOBXView.cs" />
+    <Compile Include="Business\Test\CEBPA\CEBPACMMCNTEView.cs" />
     <Compile Include="Business\Test\CEBPA\CEBPAWPHOBXView.cs" />
     <Compile Include="Business\Test\ChromosomeAnalysisForFetalAnomaly\ChromosomeAnalysisForFetalAnomalCMMCNteView.cs" />
     <Compile Include="Business\Test\ChromosomeAnalysisForFetalAnomaly\ChromosomeAnalysisForFetalAnomalyWPHOBXView.cs" />
+    <Compile Include="Business\Test\CLLByFish\CLLByFishCMMCNTEView.cs" />
     <Compile Include="Business\Test\CLLByFish\CLLByFishWPHOBXView.cs" />
+    <Compile Include="Business\Test\EosinophiliaByFISH\EosinophiliaByFISHCMMCNTEView.cs" />
     <Compile Include="Business\Test\EosinophiliaByFISH\EosinophiliaByFISHWPHOBXView.cs" />
     <Compile Include="Business\Test\FLT3Preliminary\FLT3PreliminaryTest.cs" />
+    <Compile Include="Business\Test\FLT3\FLT3CMMCNTEView.cs" />
     <Compile Include="Business\Test\FLT3\FLT3WPHOBXView.cs" />
     <Compile Include="Business\Test\HPV1618SolidTumor\HPV1618SolidTumorWPHOBXView.cs" />
     <Compile Include="Business\Test\IgHMFABByFish\IgHMFABByFishEPICOBXView.cs" />
@@ -1183,7 +1192,9 @@
     <Compile Include="Business\Test\JAK2Exon1214\JAK2Exon1214CMMCNteView.cs" />
     <Compile Include="Business\Test\JAK2V617F\JAK2V617FCMMCNteView.cs" />
     <Compile Include="Business\Test\LowGradeSmallBCellLymphomaFishPanel\LowGradeSmallBCellLymphomaFishPanelTest.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LynchSyndromeIHCPanelCMMCNTEView.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LynchSyndromeIHCPanelWPHOBXView.cs" />
+    <Compile Include="Business\Test\MDSExtendedByFish\MDSExtendedByFishCMMCNTEView.cs" />
     <Compile Include="Business\Test\MDSExtendedByFish\MDSExtendedByFishWPHOBXView.cs" />
     <Compile Include="Business\Test\NeoTYPEGISTProfile\NeoTYPEGISTProfileTest.cs" />
     <Compile Include="Business\Test\PNH\PNHWPHOBXView.cs" />
