gi center adenoma

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -43,7 +43,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>155</ApplicationRevision>
+    <ApplicationRevision>162</ApplicationRevision>
     <ApplicationVersion>10.1.9.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -244,6 +244,7 @@
     <Compile Include="Business\Audit.Model\CodyCassetteColorAudit.cs" />
     <Compile Include="Business\Audit.Model\ComprehensiveColonCancerProfileFinalAudit.cs" />
     <Compile Include="Business\Audit.Model\CouldBenefitFromCCCPAudit.cs" />
+    <Compile Include="Business\Audit.Model\GICenterAdenomaAudit.cs" />
     <Compile Include="Business\Audit.Model\DistributionCanBeSetAudit.cs" />
     <Compile Include="Business\Audit.Model\DistributionNotSetAudit.cs" />
     <Compile Include="Business\Audit.Model\FinalizedAudit.cs" />
@@ -1317,7 +1318,7 @@
     <Compile Include="Business\Test\HPV1618SolidTumor\HPV1618SolidTumorNoResult.cs" />
     <Compile Include="Business\Test\HPV1618SolidTumor\HPV16NegativeHPV18PositiveResult.cs" />
     <Compile Include="Business\Test\HPV1618SolidTumor\HPV16PositiveHPV18NegativeResult.cs" />
-    <Compile Include="Business\Test\LiposarcomaFusionProfile\IDH1byIHC\IDH1byIHCTest.cs" />
+    <Compile Include="Business\Test\IDH1byIHC\IDH1byIHCTest.cs" />
     <Compile Include="Business\Test\IgHClonalityMRDByNGS\IgHClonalityMRDByNGSTest.cs" />
     <Compile Include="Business\Test\LiposarcomaFusionProfile\LiposarcomaFusionProfileEPICOBXView.cs" />
     <Compile Include="Business\Test\LiposarcomaFusionProfile\LiposarcomaFusionProfileTest.cs" />
@@ -1405,14 +1406,6 @@
     <Compile Include="Business\XPSDocument\XpsAdditionalTesting.cs" />
     <Compile Include="Business\XPSDocument\XpsDetails.cs" />
     <Compile Include="Business\XPSDocument\XPSTemplate.cs" />
-    <Compile Include="MySQLMigration\DataRowComparer.cs" />
-    <Compile Include="MySQLMigration\DataRowRefreshComparer.cs" />
-    <Compile Include="MySQLMigration\IndexedColumn.cs" />
-    <Compile Include="MySQLMigration\IndexedColumnCollection.cs" />
-    <Compile Include="MySQLMigration\MigrationStatus.cs" />
-    <Compile Include="MySQLMigration\MigrationStatusCollection.cs" />
-    <Compile Include="MySQLMigration\MySqlAODocumentBuilder.cs" />
-    <Compile Include="MySQLMigration\MySQLDatabaseBuilder.cs" />
     <Compile Include="Business\NeogenomicsResult.cs" />
     <Compile Include="Business\NeogenomicsResultCollection.cs" />
     <Compile Include="Business\nodejs\HelloWorld.cs" />
@@ -3288,41 +3281,6 @@
     <Compile Include="DomainPersistence\SqlXmlPropertyWriter.cs" />
     <Compile Include="DomainPersistence\XmlPropertyReader.cs" />
     <Compile Include="DomainPersistence\XmlPropertyWriter.cs" />
-    <Compile Include="MySQLMigration\MySqlDataReaderPropertyWriter.cs" />
-    <Compile Include="MySQLMigration\NonpersistentColumnDef.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDef.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefADT.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefCollection.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefCytologyDiagnosis.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefCytologyOtherConditions.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefCytologyReportComment.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefCytologySAComments.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefCytologyScreeningImpression.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefFlowCommentV2.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefFlowMarkerPanel.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefFlowPanel.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefICD9Code.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefImmunoComment.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefMarkers.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefMasterAccessionNo.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefMaterialLocation.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefOrderComment.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefPanel.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefPanelSet.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefPatient.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefPsaImport.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefSpecimenAdequacy.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefStainResultOption.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefStainResultOptionGroup.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefStVincent.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefTest.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefWebServiceAccount.cs" />
-    <Compile Include="MySQLMigration\NonpersistentTableDefWebServiceAccountClient.cs" />
-    <Compile Include="MySQLMigration\SqlServerFromMySqlRefresher.cs" />
-    <Compile Include="MySQLMigration\TableForeignKey.cs" />
-    <Compile Include="MySQLMigration\TableForeignKeyCollection.cs" />
-    <Compile Include="MySQLMigration\TableIndex.cs" />
-    <Compile Include="MySQLMigration\TableIndexCollection.cs" />
     <Compile Include="Store\AppDBNameEnum.cs" />
     <Compile Include="Store\IRedisServer.cs" />
     <Compile Include="Store\RedisDB.cs" />
@@ -3589,15 +3547,6 @@
     </Compile>
     <Compile Include="UI\Monitor\ReportDistributionDownMonitorPage.xaml.cs">
       <DependentUpon>ReportDistributionDownMonitorPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UI\MySql\MySqlMigrationDialog.xaml.cs">
-      <DependentUpon>MySqlMigrationDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UI\MySql\NonpersistentTableDialog.xaml.cs">
-      <DependentUpon>NonpersistentTableDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UI\MySql\SqlServerRefreshDialog.xaml.cs">
-      <DependentUpon>SqlServerRefreshDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\NHunspell.xaml.cs">
       <DependentUpon>NHunspell.xaml</DependentUpon>
@@ -5552,18 +5501,6 @@
     <Page Include="UI\Monitor\ReportDistributionDownMonitorPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="UI\MySql\MySqlMigrationDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="UI\MySql\NonpersistentTableDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="UI\MySql\SqlServerRefreshDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\NHunspell.xaml">
       <SubType>Designer</SubType>
