Add Location Entry form, DocGateway pull Location, ProCliGateway get all and get by desc

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -3297,6 +3297,9 @@
     <Compile Include="UI\Client\FacilityEntry.xaml.cs">
       <DependentUpon>FacilityEntry.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\Client\LocationEntry.xaml.cs">
+      <DependentUpon>LocationEntry.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\EmbeddingAutopsyItem.cs" />
     <Compile Include="UI\EmbeddingAutopsyList.cs" />
     <Compile Include="UI\Monitor\DashboardPage.xaml.cs">
@@ -5305,6 +5308,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="UI\Client\FacilityEntry.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Client\LocationEntry.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
